Fix text alignment of .comments_more

--- a/app/assets/stylesheets/views/things.css.scss
+++ b/app/assets/stylesheets/views/things.css.scss
@@ -2078,9 +2078,7 @@ html.feelings_show {
 
         .comments_more {
           width: 100%;
-          height: 50px;
           margin: 0;
-          line-height: 50px;
           color: $blue-dark;
           background: #fff;
           border: none;
